test/compile_error/invalidrange.conf.3.def
config invalid_range_conf {
    foo : int[-100~100.5];
}
